# tree2file

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
src/tofile/: main.py
