[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree2file"
version = "0.1.0"
description = "Create directory structures from tree command output"
readme = "README.md"
authors = [
    { name = "dawid-ai", email = "hello@dawid.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/dawid-ai/tree2file"
"Bug Tracker" = "https://github.com/dawid-ai/tree2file/issues"

[project.scripts]
t2f = "tree2file.main:main"
tree2file = "tree2file.main:main"

[tool.setuptools.packages.find]
where = ["src"]